01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-deployment
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-deployment
    spec:
      containers:
        - image: hashicorp/http-echo
          imagePullPolicy: Always
          name: http-echo
          resources: {}
