deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: argo-deployment
  name: argo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: argo-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: argo-deployment
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
