02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-test-service
spec:
  selector:
    app: web-deployment
  ports:
    - port: 80
      targetPort: 5678
