service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-test-service
spec:
  selector:
    app: argo-deployment
  ports:
  - port: 80
    targetPort: 80
