03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 'test.zahlenhelfer.duckdns.org'
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: argo-test-service
                port:
                  number: 80
